[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/external/OQ_Toolkit/VirtualKeyboard.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/ConnectPadInput.gd" type="Script" id=2]
[ext_resource path="res://scripts/TouchableViewport.gd" type="Script" id=3]
[ext_resource path="res://scripts/Keyboard.gd" type="Script" id=4]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 1.688, 1 )

[sub_resource type="ViewportTexture" id=2]
flags = 4
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
flags_unshaded = true
params_cull_mode = 2
albedo_texture = SubResource( 2 )

[sub_resource type="BoxShape" id=4]
margin = 0.001
extents = Vector3( 0.844, 0.05, 0.5 )

[node name="Keyboard" type="Spatial"]
script = ExtResource( 4 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 864, 512 )
transparent_bg = true
msaa = 6
render_target_v_flip = true
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="Viewport"]

[node name="VirtualKeyboard" parent="Viewport/CanvasLayer" instance=ExtResource( 1 )]

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0 )
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0346678, 0 )
shape = SubResource( 4 )

[node name="tl_marker" type="Spatial" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.844, 0, -0.5 )

[node name="bl_marker" type="Spatial" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.844, 0, 0.5 )

[node name="tr_marker" type="Spatial" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.844, 0, -0.5 )

[connection signal="cancel_pressed" from="Viewport/CanvasLayer/VirtualKeyboard" to="." method="_on_VirtualKeyboard_cancel_pressed"]
[connection signal="enter_pressed" from="Viewport/CanvasLayer/VirtualKeyboard" to="." method="_on_VirtualKeyboard_enter_pressed"]
[connection signal="interface_release" from="StaticBody" to="Viewport" method="_on_ConnectPadInput_interface_release"]
[connection signal="interface_touch" from="StaticBody" to="Viewport" method="_on_ConnectPadInput_interface_touch"]
